tests/specs/ecosystem/might/fail/0_3_0.test
might/fail/0.3.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { Either, mightFail, makeMightFail, mightFailSync, makeMightFailSync };
         ~~~~~~
    at file://<tmpdir>/src/index.ts:4:10

